[package]
authors = ["PROMETHIA-27"]
categories = ["game-development"]
description = "A character controller library for Bevy Engine"
documentation = "https://docs.rs/bevy_mod_wanderlust/*/bevy_mod_wanderlust/"
edition = "2021"
homepage = "https://crates.io/crates/bevy_mod_wanderlust"
keywords = ["Bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_mod_wanderlust"
readme = "README.md"
repository = "https://github.com/PROMETHIA-27/bevy_mod_wanderlust"
version = "0.4.0"

[features]
default = ["rapier"]
debug_lines = []
rapier = ["bevy_rapier3d"]

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_render",
    "bevy_gizmos",
] }
bevy_rapier3d = { git = "https://github.com/devil-ira/bevy_rapier.git", branch = "bevy-0.12", default-features = false, features = [
    "async-collider",
    "dim3",
], optional = true }

[dev-dependencies]
bevy = "0.12"
aether_spyglass = "0.2"
bevy-inspector-egui = "0.21"
bevy_framepace = "0.13"
bevy_rapier3d = { git = "https://github.com/devil-ira/bevy_rapier.git", branch = "bevy-0.12", features = ["debug-render"] }

# Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

#[patch.crates-io]
#bevy_rapier3d = { path = "../bevy_rapier/bevy_rapier3d" }
#bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier", rev = "0ea000b" }